--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -26,7 +26,8 @@
 <link href="{% static 'portfolio/assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
 <!-- Main CSS File -->
-<link rel="stylesheet" href="{% static 'portfolio/assets/css/main.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'portfolio/assets/css/main.css' %}"> -->
+ <link rel="stylesheet" href="{% static 'portfolio/assets/css/main.css' %}">
 
   <!-- =======================================================
   * Template Name: iPortfolio
